{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 107,
  "lineage": "23aa0f07-cea8-32bf-a4a0-e1399274a768",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220894557754:internet-gateway/igw-0f96fadfa604985bd",
            "id": "igw-0f96fadfa604985bd",
            "owner_id": "220894557754",
            "tags": {
              "Name": "gateway-igw"
            },
            "tags_all": {
              "Name": "gateway-igw"
            },
            "vpc_id": "vpc-07f32ac95f9717cd7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my-gateway-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220894557754:route-table/rtb-077b784acb54afb26",
            "id": "rtb-077b784acb54afb26",
            "owner_id": "220894557754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f96fadfa604985bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-rt"
            },
            "tags_all": {
              "Name": "pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f32ac95f9717cd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.gateway-igw",
            "module.vpc_module.aws_vpc.my-gateway-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gateway-rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091f61f8ae022603f",
            "route_table_id": "rtb-077b784acb54afb26",
            "subnet_id": "subnet-05d1a122c8ba6a0e1"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.gateway-igw",
            "module.vpc_module.aws_route_table.gateway-rt",
            "module.vpc_module.aws_subnet.gateway-pub-sn",
            "module.vpc_module.aws_vpc.my-gateway-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hands-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220894557754:security-group/sg-0085e3a96d488feb4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0085e3a96d488feb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hands-project",
            "name_prefix": "",
            "owner_id": "220894557754",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hands-project"
            },
            "tags_all": {
              "Name": "hands-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f32ac95f9717cd7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.my-gateway-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gateway-pub-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220894557754:subnet/subnet-05d1a122c8ba6a0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d1a122c8ba6a0e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "220894557754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gateway-pub-sn"
            },
            "tags_all": {
              "Name": "gateway-pub-sn"
            },
            "vpc_id": "vpc-07f32ac95f9717cd7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my-gateway-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-gateway-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:220894557754:vpc/vpc-07f32ac95f9717cd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01daaa05bd8d6c1cf",
            "default_route_table_id": "rtb-0362cf9a96e236ee4",
            "default_security_group_id": "sg-0c559404e26413aaa",
            "dhcp_options_id": "dopt-0cd51e8d675e59397",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f32ac95f9717cd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0362cf9a96e236ee4",
            "owner_id": "220894557754",
            "tags": {
              "Name": "my-gateway-vpc"
            },
            "tags_all": {
              "Name": "my-gateway-vpc"
            }
          }
        }
      ]
    }
  ]
}